# cgds

./: .gitignore  cgds.pro
cgds/: CMakeLists.txt  aref.cpp  aref.h  boundary.cpp  boundary.h  canvas.cpp  canvas.h  cgds.pro  elements.cpp  elements.h  gdsio.cpp  gdsio.h  graphicsitems.cpp  graphicsitems.h  library.cpp  library.h  node.cpp  node.h  path.cpp  path.h  sref.cpp  sref.h  structures.cpp  structures.h  tags.h  techfile.cpp  techfile.h  text.cpp  text.h
test/: main.cpp  test.pro
